RESOLVED FIXED229344
[macCatalyst] Crash when clicking a phone number link
https://bugs.webkit.org/show_bug.cgi?id=229344
Summary [macCatalyst] Crash when clicking a phone number link
Aditya Keerthi
Reported 2021-08-20 11:43:56 PDT
...
Attachments
Patch (3.53 KB, patch)
2021-08-20 12:18 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-08-20 11:44:08 PDT
Aditya Keerthi
Comment 2 2021-08-20 12:18:02 PDT
EWS
Comment 3 2021-08-20 17:14:17 PDT
Committed r281352 (240767@main): <https://commits.webkit.org/240767@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436017 [details].
Note You need to log in before you can comment on or make changes to this bug.