Cherry-pick r281352. rdar://problem/83461013

[macCatalyst] Crash when clicking a phone number link
    https://bugs.webkit.org/show_bug.cgi?id=229344
    rdar://81804638

    Reviewed by Tim Horton.

    Clicking on a phone number link should present data detection UI.
    However, `-[WKActionSheetAssistant _elementActionForDDAction:]` always
    returns nil on Catalyst, resulting in crash when attempting to add the
    returned action to an NSArray.

    Given that the methods used in `_elementActionForDDAction:` are available
    on Catalyst, fix the crash by ensuring the method does not return nil, and
    only making the method available on platforms where ENABLE(DATA_DETECTION)
    is defined.

    * UIProcess/ios/WKActionSheetAssistant.mm:
    (-[WKActionSheetAssistant _elementActionForDDAction:]):

    Canonical link: https://commits.webkit.org/240767@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281352 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.126@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@282991 268f45cc-cd09-0410-ab3c-d52691b4dbfc